@@ -1,3 +1,9 @@
+2008-11-27  Jens Granseuer  <jensgr@gmx.net>
+
+	* capplet-util.c: (directory_delete_recursive): don't try to delete
+	the directory twice; fixes cleaning up after theme installations, for
+	example (bug #562371)
+
 ==================== 2.25.1 ====================
 
 2008-10-26  Jens Granseuer  <jensgr@gmx.net>
